Alignment and Text Color implemented. fixes #7 #8

--- a/css/app.css
+++ b/css/app.css
@@ -136,7 +136,6 @@ html, body {
     padding: 0px;
     width: 100%;
     overflow: hidden;
-    zoom: -1;
 }
 
 .line::before {
